// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sets up the right view hierarchy 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "height": "100%",
          "width": "100%",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "center",
              "flex": 1,
              "maxWidth": 540,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row-reverse",
                "marginLeft": 20,
                "marginRight": 20,
                "marginTop": 20,
                "maxHeight": 600,
              }
            }
          >
            <View
              style={
                Array [
                  undefined,
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#666666",
                        "fontFamily": "ReactNativeAGaramondPro-Regular",
                        "fontSize": 20,
                        "marginTop": 5,
                        "position": "absolute",
                        "width": "100%",
                        "zIndex": -1,
                      },
                    ]
                  }
                >
                  Add notes about how you aquired the work. If you’re not sure add any details about how long you’ve had the work.
                </Text>
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="sentences"
                  autoFocus={false}
                  keyboardAppearance="dark"
                  multiline={true}
                  onChangeText={[Function]}
                  rejectResponderTermination={true}
                  selectionColor="#cccccc"
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "color": "white",
                        "flexBasis": 0,
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "fontFamily": "ReactNativeAGaramondPro-Regular",
                        "fontSize": 20,
                        "height": "100%",
                      },
                    ]
                  }
                  underlineColorAndroid="transparent"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#666666",
              "height": 1,
            },
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "black",
            "height": 56,
            "marginBottom": 0,
            "opacity": 1,
            "paddingTop": 18,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "white",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontFamily": "AvantGardeGothicITC",
                "fontSize": 14,
                "textAlign": "center",
              },
            ]
          }
        >
          DONE
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`with an existing state Sets up the right view hierarchy 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "height": "100%",
          "width": "100%",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "center",
              "flex": 1,
              "maxWidth": 540,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row-reverse",
                "marginLeft": 20,
                "marginRight": 20,
                "marginTop": 20,
                "maxHeight": 600,
              }
            }
          >
            <View
              style={
                Array [
                  undefined,
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="sentences"
                  autoFocus={false}
                  keyboardAppearance="dark"
                  multiline={true}
                  onChangeText={[Function]}
                  rejectResponderTermination={true}
                  selectionColor="#cccccc"
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "color": "white",
                        "flexBasis": 0,
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "fontFamily": "ReactNativeAGaramondPro-Regular",
                        "fontSize": 20,
                        "height": "100%",
                      },
                    ]
                  }
                  underlineColorAndroid="transparent"
                  value="Acquired by my father somewhere"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#666666",
              "height": 1,
            },
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "black",
            "height": 56,
            "marginBottom": 0,
            "opacity": 1,
            "paddingTop": 18,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "white",
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
                "fontFamily": "AvantGardeGothicITC",
                "fontSize": 14,
                "textAlign": "center",
              },
            ]
          }
        >
          DONE
        </Text>
      </View>
    </View>
  </View>
</View>
`;
